# zap

./: .gitignore  LICENSE  Makefile  README.md  Zapfile  deps.txt
bootstrap/: CMakeLists.txt
bootstrap/lib/zap/: CMakeLists.txt
kitchen-sink/: conan.cpp  config.cpp
share/docker/: Dockerfile
src/include/zap/zap/: archive_info.hpp  archiver.hpp  builder.hpp  cmake_configs.hpp  command.hpp  config.hpp  container_helpers.hpp  dep.hpp  dep_info.hpp  dep_status.hpp  dependency.hpp  env.hpp  env_db.hpp  env_db_types.hpp  env_paths.hpp  executor.hpp  fetcher.hpp  file_utils.hpp  files.hpp  frameworks.hpp  generator.hpp  graph.hpp  inc_dirs.hpp  indent_utils.hpp  join_utils.hpp  layout.hpp  link_type.hpp  list_map.hpp  log.hpp  os_info.hpp  package_config_type.hpp  package_configs.hpp  pkg_configs.hpp  pkg_items.hpp  prog.hpp  project.hpp  remote.hpp  repository.hpp  resolve_info.hpp  resolver.hpp  (+16 more)
src/include/zap/zap/archivers/: zip.hpp
src/include/zap/zap/builders/: autotools.hpp  cmake.hpp
src/include/zap/zap/cmake/: configs.hpp  project.hpp  toolchain_file.hpp  trace_parser.hpp
src/include/zap/zap/command/: build.hpp  configure.hpp  empty.hpp  install.hpp  scan.hpp
src/include/zap/zap/commands/: analyze.hpp  build.hpp  configure.hpp  empty.hpp  env.hpp  install.hpp  remote.hpp
src/include/zap/zap/db/: dbi.hpp  storage_base.hpp
src/include/zap/zap/fetchers/: curl.hpp
src/include/zap/zap/generators/: cmake.hpp
src/include/zap/zap/layouts/: app.hpp  cbuild.hpp
src/include/zap/zap/package/: manifest.hpp
src/include/zap/zap/pkg_config/: configs.hpp
src/include/zap/zap/resolvers/: apt.hpp  conan.hpp
src/include/zap/zap/toolchains/: clang.hpp  gcc.hpp  msvc.hpp
src/lib/zap/zap/: archive_utils.cpp  archive_utils.hpp  archiver.cpp  builder.cpp  cmake_configs.cpp  command.cpp  config.cpp  dep_info.cpp  dependency.cpp  env.cpp  env_db.cpp  env_paths.cpp  executor.cpp  fetcher.cpp  file_utils.cpp  files.cpp  frameworks.cpp  generator.cpp  graph.cpp  layout.cpp  os_info.cpp  package_configs.cpp  pkg_configs.cpp  pkg_items.cpp  prog.cpp  project.cpp  remote.cpp  repository.cpp  resolve_info.cpp  resolver.cpp  scan_context.cpp  scope.cpp  sys_db.cpp  sys_db_types.cpp  target.cpp  toolchain.cpp  toolchain_info.cpp  toolchain_type.cpp  url.cpp  utils.cpp  (+1 more)
src/lib/zap/zap/archivers/: zip.cpp
src/lib/zap/zap/builders/: autotools.cpp  cmake.cpp
src/lib/zap/zap/cmake/: configs.cpp  project.cpp  toolchain_file.cpp  trace_parser.cpp
src/lib/zap/zap/command/: build.cpp  configure.cpp  empty.cpp  install.cpp  scan.cpp
src/lib/zap/zap/commands/: analyze.cpp  build.cpp  configure.cpp  empty.cpp  env.cpp  install.cpp  remote.cpp
src/lib/zap/zap/db/: storage_base.cpp
src/lib/zap/zap/fetchers/: curl.cpp
src/lib/zap/zap/generators/: cmake.cpp
src/lib/zap/zap/layouts/: app.cpp  cbuild.cpp
src/lib/zap/zap/package/: manifest.cpp
src/lib/zap/zap/pkg_config/: configs.cpp
src/lib/zap/zap/resolvers/: apt.cpp  conan.cpp
src/lib/zap/zap/text/: table.cpp  table.hpp
src/lib/zap/zap/toolchains/: clang.cpp  gcc.cpp  msvc.cpp
toolchains/: common.cmake  debug.cmake  ext.cmake  release.cmake
utils/: bootstrap  build-ext  build-externals
